# static/openapi.json
@@ -3149,9 +3149,9 @@
         }
       }
     },
-    "/image/whoreallyare": {
+    "/image/caught": {
       "get": {
-        "summary": "Make a whoreallyare image using your own image",
+        "summary": "Make a caught scooby-doo image using your own image",
         "tags": [
           "Files"
         ],
